Preparing synchronized for the session.